5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1593_820.log
== TEST (2019-03-30 01:22:43) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 01:39:07) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR =int( input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_50 = VALOR//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_50 = notas_50 % 50

# Quantidade de notas de R$ 10
notas_10 = resto_50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_10 = resto_50 % 10

# Quantidade de notas de R$ 2
notas_2 = resto_10 // 2

print(int(notas_50))
print(int(notas_10))
print(int(notas_2))

-- OUTPUT:
40
4
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 01:46:13) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int (input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor // 50 = notas_50

# Valor restante a ser sacado com notas menores que R$ 50
resto_50 = valor % 50

# Quantidade de notas de R$ 10
notas_10 = resto_50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_10 = resto_50 % 10

# Quantidade de notas de R$ 2
notas_2 = resto_10 // 2

print(int(notas_50))
print(int(notas_10))
print(int(notas_2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 01:46:45) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int (input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_50 = VALOR//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_50 = valor % 50

# Quantidade de notas de R$ 10
notas_10 = resto_50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_10 = resto_50 % 10

# Quantidade de notas de R$ 2
notas_2 = resto_10 // 2

print(int(notas_50))
print(int(notas_10))
print(int(notas_2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    resto_50 = valor % 50
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 01:47:17) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int (input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_50 = VALOR//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_50 =notas_50 % 50

# Quantidade de notas de R$ 10
notas_10 = resto_50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_10 = resto_50 % 10

# Quantidade de notas de R$ 2
notas_2 = resto_10 // 2

print(int(notas_50))
print(int(notas_10))
print(int(notas_2))

-- OUTPUT:
40
4
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 01:56:13) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int (input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_50 = VALOR//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_50 =VALOR % 50

# Quantidade de notas de R$ 10
notas_10 = resto_50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_10 = VALOR % 10

# Quantidade de notas de R$ 2
notas_2 = resto_10 // 2

print(int(notas_50))
print(int(notas_10))
print(int(notas_2))

-- EXECUTION TIME:
0.120435
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
